# silo

./: .gitignore  .gitmodules  README.md  The_Oxford_3000.txt  cpu.sh  decrypted_msg.txt  encrypted_msg.txt  test.sh
c++/: .gitignore  Makefile.am  README.md  configure.ac  test.sh
c++/ext/: install.sh
c++/src/: BlockingPortionQueue.hpp  Grille.cpp  Grille.hpp  MPMC_PortionQueue.hpp  MostlyNonBlockingPortionQueue.hpp  NonBlockingPortionQueue.hpp  NonBlockingQueue.hpp  TurningGrille.cpp  TurningGrille.hpp  TurningGrilleCracker.cpp  TurningGrilleCracker.hpp  UnboundedNonBlockingQueue.hpp  WordsTrie.cpp  WordsTrie.hpp  silo.cpp
java/: .gitignore  README.md  pom.xml  test.sh
java/src/main/java/org/voidland/concurrent/: BlockingPortionQueue.java  ConcurrentPortionQueue.java  Grille.java  GrilleInterval.java  MPMC_PortionQueue.java  MostlyNonBlockingPortionQueue.java  NonBlockingPortionQueue.java  Silo.java  TextbookPortionQueue.java  TurningGrilleCracker.java  TurningGrilleCrackerProducerConsumer.java  TurningGrilleCrackerWithPerfectParallelism.java  WordsTrie.java
java/src/main/java/org/voidland/concurrent/queue/: BlockingPortionQueue.java  ConcurrentBlownQueue.java  ConcurrentNonBlockingQueue.java  MPMC_PortionQueue.java  MostlyNonBlockingPortionQueue.java  NonBlockingQueue.java  TextbookPortionQueue.java  UnboundedNonBlockingQueue.java
java/src/main/java/org/voidland/concurrent/turning_grille/: Grille.java  GrilleInterval.java  TurningGrilleCracker.java  TurningGrilleCrackerImplDetails.java  TurningGrilleCrackerProducerConsumer.java  TurningGrilleCrackerSerial.java  TurningGrilleCrackerSyncless.java  TurningGrilleCrackerWithPerfectParallelism.java  WordsTrie.java
rust/: .gitignore  Cargo.toml  README.md  test.sh
rust/src/: org.rs  silo.rs
rust/src/org/voidland/: concurrent.rs
rust/src/org/voidland/concurrent/: queue.rs  turning_grille.rs
rust/src/org/voidland/concurrent/queue/: blocking_portion_queue.rs  mostly_non_blocking_portion_queue.rs  non_blocking_queue.rs
rust/src/org/voidland/concurrent/turning_grille/: grille.rs  words_trie.rs
